@@ -55,6 +55,14 @@
             <groupId>org.apache.karaf.deployer</groupId>
             <artifactId>org.apache.karaf.deployer.war</artifactId>
         </dependency>
+
+        <!-- Felix -->
+        <!-- SMX4-764 - Override the Felix Framework version to use 3.0.8 -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <version>3.0.8</version>
+        </dependency>
         
         <!-- ServiceMix Components -->
         <dependency>
