@@ -35,6 +35,11 @@
               <exclude>etc/users.properties</exclude>
               <exclude>etc/custom.properties</exclude>
               <exclude>etc/jre.properties</exclude>
+              <!-- SMX4-764 - Override Felix Framework version -->
+              <!-- begin snippet -->
+              <exclude>etc/config.properties</exclude>
+              <exclude>system/org/apache/felix/org.apache.felix.framework/**</exclude>
+              <!-- end snippet -->
               <exclude>LICENSE</exclude>
               <exclude>NOTICE</exclude>
               <exclude>README</exclude>
@@ -438,6 +443,18 @@
                 <include>org.apache.servicemix.specs:org.apache.servicemix.specs.stax-api-1.0</include>
             </includes>
         </dependencySet>
+        <!-- SMX4-764 - Override Felix Framework to 3.0.8 version -->
+        <!-- begin snippet -->
+        <dependencySet>
+            <outputDirectory>/system</outputDirectory>
+            <unpack>false</unpack>
+            <useProjectArtifact>false</useProjectArtifact>
+            <outputFileNameMapping>org/apache/felix/${artifact.artifactId}/${artifact.baseVersion}/${artifact.artifactId}-${artifact.baseVersion}${dashClassifier?}.${artifact.extension}</outputFileNameMapping>
+            <includes>
+                <include>org.apache.felix:org.apache.felix.framework</include>
+            </includes>
+        </dependencySet>
+        <!-- end snippet -->
 
     </dependencySets>
 
